cabal-version:   3.0
name:            pcap
version:         0.4.5.2
license:         BSD-3-Clause
license-file:    LICENSE
synopsis:        A system-independent interface for user-level packet capture
description:     A system-independent interface for user-level packet capture
maintainer:      Bryan O'Sullivan <bos@serpentine.com>
author:          Bryan O'Sullivan, Nick Burlett, Dominic Steinitz, Gregory Wright (original author)
homepage:        https://github.com/bos/pcap
bug-reports:     https://github.com/bos/pcap/issues
category:        Network
extra-source-files:
                 configure.ac configure include/pcapconfig.h.in
                 pcap.buildinfo.in README.markdown
extra-tmp-files: config.log config.status
build-type:      Configure

library
  build-depends: base < 5, bytestring >= 0.9, network, time
  if impl(ghc >= 6.10)
    build-depends: base >= 4

  exposed-modules: Network.Pcap.Base
                   Network.Pcap
  default-extensions: ForeignFunctionInterface, CPP
  ghc-options:     -Wall -funbox-strict-fields

  include-dirs:     include
  includes:         pcapconfig.h pcap.h
  autogen-includes: pcapconfig.h
  install-includes: pcapconfig.h

  extra-libraries:  pcap

source-repository head
  type:     git
  location: git://github.com/bos/pcap.git

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/pcap
